Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-52419

Regression: QGraphicsView using QOpenGLWidget as viewport not updated correctly

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.6.2
    • 5.6.0
    • GUI: OpenGL
    • None
    • OS X 10.11.4 and Arch Linux
    • 61521b64a4b9fc1046e0d16cb84c6181ae85493c

      It's very simple to reproduce - see attached sources and screenshots. When QGraphicsView using a QOpenGLWidget as a viewport has at least one scrollbar visible, the QGraphicsView contents are often rendered incorrectly.

      I have verified that this does not occur with Qt 5.5.0.

        1. bad.png
          79 kB
          Erik Hvatum
        2. good.png
          74 kB
          Erik Hvatum
        3. gv_glw_flicker_test_case.pro
          0.3 kB
          Erik Hvatum
        4. main.cpp
          0.4 kB
          Erik Hvatum
        5. qt_fix.patch
          3 kB
          Erik Hvatum
        6. qtbug52419.zip
          2 kB
          Friedemann Kleint
        For Gerrit Dashboard: QTBUG-52419
        # Subject Branch Project Status CR V

            lagocs Laszlo Agocs
            ehvatum Erik Hvatum
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes